5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1638_2731.log
== TEST (2019-04-11 11:36:47) 
-- CODE:
a=float(input())
b=float(input())
r==float(input())

if(b>0):
	print("Superiores");
if(b<0):
	print("Inferiores");
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    r==float(input())
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:36:50) 
-- CODE:
a=float(input())
b=float(input())
r==float(input())

if(b>0):
	print("Superiores");
if(b<0):
	print("Inferiores");
	
-- EXECUTION TIME:
0.169388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2731/main.py", line 3, in <module>
    r==float(input())
NameError: name 'r' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:56) 
-- CODE:
a=float(input())
b=float(input())
r==float(input())

if(b>0):
	print("Superiores");
if(b<0):
	print("Inferiores");
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    r==float(input())
NameError: name 'r' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:37:15) 
-- CODE:
a=float(input())
b=float(input())
r=float(input())

if(b>0):
	print("Superiores");
if(b<0):
	print("Inferiores");
	
-- EXECUTION TIME:
0.195206
-- TEST CASE 1:
---- input:
4.5
-2.2
3
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
3
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
1
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
